# palmier-pro-windows

./: WINDOWS.md
Sources/PalmierPro/Account/: AccountPopoverCard.swift
Sources/PalmierPro/Agent/Tools/: ToolExecutor+Clips.swift  ToolExecutor+Generate.swift  ToolExecutor.swift
Sources/PalmierPro/Editor/ViewModel/: EditorViewModel+ClipMutations.swift
Sources/PalmierPro/Generation/UI/: GenerationView.swift
Sources/PalmierPro/Models/: Timeline.swift
Sources/PalmierPro/Preview/: CompositionBuilder.swift
Tests/PalmierProTests/: CompositionBuilderTests.swift
windows/: HERMES.md  README.md  package-lock.json  package.json  vite.config.ts
windows/src/: App.tsx
windows/src-tauri/: Cargo.toml  tauri.conf.json
windows/src-tauri/capabilities/: default.json
windows/src-tauri/icons/: icon.icns
windows/src-tauri/src/: edit.rs  export.rs  ffmpeg.rs  import_media.rs  lib.rs  main.rs  media.rs  preview.rs  project.rs  state.rs
windows/src-tauri/src/mcp/: mod.rs  tools.rs
windows/src/components/: PreviewPlayer.tsx
windows/src/hooks/: usePlayback.ts
windows/src/lib/: tauri-api.ts
windows/src/styles/: theme.css
windows/src/types/: project.ts
