[package]
name = "palmier-pro-windows"
version = "0.1.0"
description = "Palmier Pro for Windows"
authors = ["Palmier"]
edition = "2021"

[lib]
name = "palmier_pro_windows_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "io-util"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
